# python-web-service-boilerplate

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  fastapi-best-practices.md  init_project.ps1  init_project.sh  pyproject.toml
.github/: branch-protection.yml  setup-branch-protection.md
.github/actions/project-environment-setup/: action.yml
.github/workflows/: codeql.yml  init-project-ubuntu.yml  init-project-windows.yml  publish-docker.yml  python-ci-with-poetry.yml
alembic/: env.py  script.py.mako
alembic/versions/v0.1.0/: 3057e681742b_first_migration_script.py
src/python_web_service_boilerplate/: __main__.py
src/python_web_service_boilerplate/alembic/: env.py
src/python_web_service_boilerplate/alembic/versions/v0.1.0/: 2025-08-30-19_13_49-3057e681742b_first_migration_script.py
src/python_web_service_boilerplate/common/: asynchronization.py  common_function.py  middleware.py  profiling.py  router_loader.py  trace.py
src/python_web_service_boilerplate/configuration/: application.py  apscheduler.py  apscheduler_configuration.py  database.py  database_configuration.py  loguru.py  loguru_configuration.py  thread_pool.py
src/python_web_service_boilerplate/core/: common_models.py
src/python_web_service_boilerplate/core/auth/: decorators.py  middleware.py  models.py  repository.py  router.py  schemas.py  service.py
src/python_web_service_boilerplate/core/startup_log/: models.py  repository.py  router.py  service.py
src/python_web_service_boilerplate/resources/: .env  application.conf
src/python_web_service_boilerplate/startup_log/: models.py  repository.py  router.py  schemas.py  service.py
src/python_web_service_boilerplate/system/: common_models.py
src/python_web_service_boilerplate/system/auth/: middleware.py  models.py  repository.py  router.py  schemas.py  service.py
src/python_web_service_boilerplate/system/startup_log/: models.py  repository.py  router.py  service.py
tests/: conftest.py
tests/test_python_web_service_boilerplate/: test_main.py
tests/test_python_web_service_boilerplate/common/: test_asynchronization.py  test_common_function.py  test_debounce_throttle.py  test_profiling.py
tests/test_python_web_service_boilerplate/configuration/: test_application_configuration.py  test_loguru_configuration.py  test_thread_pool_configuration.py
tests/test_python_web_service_boilerplate/core/auth/: test_router.py
tests/test_python_web_service_boilerplate/core/startup_log/: test_router.py
tests/test_python_web_service_boilerplate/system/auth/: test_router.py
tests/test_python_web_service_boilerplate/system/startup_log/: test_router.py
